k8s/services/countly-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: countly-api-deployment
  labels:
    app: countly-api
spec:
  selector:
    matchLabels:
      app: countly-api
      role: web
  template:
    metadata:
      labels:
        app: countly-api
        role: web
    spec:
      containers:
      - image: countly/api:19.08.1
        imagePullPolicy: IfNotPresent
        name: countly-api
        ports:
        - name: http
          protocol: TCP
          containerPort: 3001
        readinessProbe:
          httpGet:
            path: /o/ping
            port: 3001
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
