k8s/services/countly-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: countly-frontend-deployment
  labels:
    app: countly-frontend
spec:
  selector:
    matchLabels:
      app: countly-frontend
      role: web
  template:
    metadata:
      labels:
        app: countly-frontend
        role: web
    spec:
      containers:
      - image: countly/frontend:19.08.1
        imagePullPolicy: IfNotPresent
        name: countly-frontend
        ports:
        - name: http
          protocol: TCP
          containerPort: 6001
        readinessProbe:
          httpGet:
            path: /ping
            port: 6001
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
