k8s/services/countly-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: countly-api
spec:
  selector:
    app: countly-api
    role: web
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
