k8s/services/countly-frontend-endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: countly-frontend
subsets:
- addresses:
  - ip: 192.168.100.1
  ports:
  - port: 6001
