k8s/services/countly-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: countly-frontend
spec:
  selector:
    app: countly-frontend
    role: web
  ports:
    - protocol: TCP
      port: 6001
      targetPort: 6001
