k8s/services/imageproxy-service.yml
apiVersion: v1
kind: Service
metadata:
  name: imageproxy
spec:
  selector:
    app: imageproxy
    role: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
