k8s/services/mongodb-endpoint.yml
kind: Endpoints
apiVersion: v1
metadata:
  name: mongodb
subsets:
- addresses:
  - ip: 192.168.100.1
  ports:
  - port: 27017
