k8s/services/mongodb-service.yml
kind: Service
apiVersion: v1
metadata:
  name: mongodb
spec:
  type: ClusterIP
  ports:
  - port: 27017
