k8s/services/opensearch-endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: opensearch
subsets:
- addresses:
  - ip: 192.168.100.1
  ports:
  - port: 9200
