k8s/services/opensearch-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: opensearch
spec:
  type: ClusterIP
  ports:
  - port: 9200
