k8s/services/proxy-endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: proxy
subsets:
- addresses:
  - ip: 192.168.100.1
  ports:
  - name: standard
    port: 3128
  - name: private
    port: 3443
