k8s/services/proxy-endpoint.yml
kind: Endpoints
apiVersion: v1
metadata:
  name: proxy
subsets:
- addresses:
  - ip: 192.168.100.1
  ports:
  - name: http
    port: 3128
  - name: https
    port: 3443
  - name: https-private
    port: 4118
