k8s/services/proxy-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: proxy
spec:
  type: ClusterIP
  ports:
  - name: standard
    port: 3128
  - name: private
    port: 3443
