k8s/services/proxy-service.yml
kind: Service
apiVersion: v1
metadata:
  name: proxy
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3128
  - name: https
    port: 3443
  - name: https-private
    port: 4118
