k8s/services/imageproxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imageproxy-ingress
spec:
  rules:
  - host: imageproxy
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: imageproxy
            port:
              number: 80
